# RuJpAnkiDeck

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
ankimaker/: main.py  pyproject.toml  requirements.txt  template.py
data/: freq_list.csv
dictmaker/: dictionary.json  example.json  main.py  py_inspect.py  pyproject.toml  requirements.txt
dictmaker/core/: processor.py
dictmaker/models/: models.py
dictmaker/parsers/: article_parser.py  base.py  example_parser.py  gui_word_parser.py  word_parser.py
dictmaker/tests/: test_article_duplicate_check.py  test_article_processor.py  test_article_qualifier.py  test_gui_parser.py
dictmaker/utils/: file_utils.py  re_utils.py
shared/: pyproject.toml
shared/csv/: utils.py
shared/database/: db_session.py  models.py  utils.py
shared/kakashi/: utils.py
shared/regex/: utils.py
shared/shared/: config.py  csv.py  media.py
shared/shared/csv/: utils.py
shared/shared/database/: db_session.py  models.py  utils.py
shared/shared/regex/: utils.py
tts/: Dockerfile  main.py  pyproject.toml
