[project]
name = "rujpankideck"
version = "0.1.0"
description = "Root"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anki>=25.9.2",
    "beautifulsoup4>=4.14.3",
    "html2text>=2025.4.15",
    "jaconv>=0.4.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "pywinauto>=0.6.9",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]

[tool.uv.workspace]
members = ["ankimaker", "dictmaker", "shared"]

[tool.uv]
cache-dir = "./.uv_cache"
