[project]
name = "ankimaker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anki==25.9.2",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "decorator==5.2.1",
    "deprecated==1.3.1",
    "greenlet==3.3.0",
    "idna==3.11",
    "jaconv==0.4.1",
    "markdown==3.10",
    "orjson==3.11.5",
    "protobuf==6.33.2",
    "pykakasi==2.3.0",
    "pysocks==1.7.1",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "sqlalchemy==2.0.45",
    "typing-extensions==4.15.0",
    "urllib3==2.6.2",
    "wrapt==2.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

[tool.uv]
cache-dir = "./.uv_cache"